@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - (ProhibitSignaturesAndAtUnderscore) Added new policy (gh#6)
 
 0.05      2024-02-10 05:49:37 -0700
   - (ProhibitSpecificModules) Added new policy (gh#5)
